[tool.poetry]
name = "blake"
version = "0.1.0"
description = ""
authors = ["Ai Tran <nhonai.tran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.3.5"
jupyter = "^1.0.0"
ipykernel = "^6.6.0"
pyarrow = "^6.0.1"
numpy = "^1.21.5"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
requests = "^2.26.0"
SQLAlchemy = "^1.4.29"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
etl = 'blake.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
